4.0 regression: unsolicited "Projection: source" OSD
Whenever starting a video on the plain X11 output, the OSD shows a "Projection: source" message for no reasons. Sounds like something is triggering a callback that it really should not.
Whenever starting a video on the plain X11 output, the OSD shows a "Projection: source" message for no reasons. Sounds like something is triggering a callback that it really should not.
VideoLAN code repository instance