vout_intf: don't display projection if unchanged

Otherwise it gets printed everytime a video track starts.

Fixes #29385.